linter/src/rules/snapshots/squawk_linter__rules__adding_foreign_key_constraint__test_rules__add_foreign_key_constraint_lock.snap
---
source: linter/src/rules/adding_foreign_key_constraint.rs
expression: lint_sql(sql)
---
[
    RuleViolation {
        kind: AddingForeignKeyConstraint,
        span: Span {
            start: 53,
            len: Some(
                94,
            ),
        },
        messages: [
            Note(
                "Requires a table scan of the table you're altering and a SHARE ROW EXCLUSIVE lock on both tables, which blocks writes to both tables while your table is scanned.",
            ),
            Help(
                "Add NOT VALID to the constraint in one transaction and then VALIDATE the constraint in a separate transaction.",
            ),
        ],
    },
]
