linter/src/rules/snapshots/squawk_linter__rules__adding_foreign_key_constraint__test_rules__create_table_and_add_foreign_key_constraint_after_with_assume_in_transaction.snap
---
source: linter/src/rules/adding_foreign_key_constraint.rs
expression: lint_sql_assuming_in_transaction(sql)
---
[]
